Fixed Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,17 @@ body {
   background: #404eed;
   height: 600px;
   position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.container:before {
+  content: "";
+  height: 590px;
+  width: 100%;
+  background: url(../img/clouds.png) no-repeat center center/cover;
+  z-index: -1;
+  opacity: 0.6;
+  position: absolute;
 }
 nav {
   display: flex;
@@ -92,9 +103,9 @@ nav ul li a:hover {
 .discord {
   border-radius: 40px;
   padding: 12px 16px;
-
+  background-color: white;
   font-size: 0.8rem;
-  border: 1px solid #404eed;
+  border: 0;
   outline: none;
   cursor: pointer;
 }
@@ -126,25 +137,31 @@ nav ul li a:hover {
   margin-top: 40px;
   font-size: 20px;
 }
-/* .cloud {
-  position: absolute;
-  bottom: 0;
-  left: -40%;
-} */
-.shoe img,
-.dino img {
-  height: 360px;
-}
+
 .shoe {
+  height: 300px;
+  width: 600px;
   position: absolute;
-  left: -21%;
-  bottom: 0%;
+  left: -16%;
+  z-index: -1;
+  bottom: 0;
+  overflow: hidden;
+}
+.shoe img {
+  height: 280px;
+}
+.dino img {
+  height: 300px;
 }
 
 .dino {
   position: absolute;
-  right: -19%;
+  height: 318px;
+  width: 290px;
+  right: 0%;
   bottom: 0%;
+
+  overflow: hidden;
 }
 
 .buttons {
@@ -152,6 +169,7 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   margin: 24px;
+  z-index: 1;
 }
 .mac,
 .browser {
